--- a/h-vue/package.json
+++ b/h-vue/package.json
@@ -51,6 +51,7 @@
     "font-awesome": "^4.7.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "iview": "^3.5.0-rc.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
     "less": "^3.10.3",
